--- a/src/assets/styles/css/PostAuthor.css
+++ b/src/assets/styles/css/PostAuthor.css
@@ -1,5 +1,5 @@
 .post-author {
-  padding-bottom: 15px;
+  padding: 10px 0px 15px;
   font-size: 16px;
   letter-spacing: -0.1px;
   line-height: 46px;
