--- a/src/redux/components/PostAuthor/PostAuthor.scss
+++ b/src/redux/components/PostAuthor/PostAuthor.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .post-author {
-  padding-bottom: 15px;
+  padding: 10px 0px 15px;
   font-size: $md-font-size;
   letter-spacing: -0.1px;
   line-height: 46px;
