--- a/src/assets/styles/css/MainCardSliderComponent.css
+++ b/src/assets/styles/css/MainCardSliderComponent.css
@@ -1,19 +1,17 @@
-.main-card-page {
-  padding: 150px 100px 150px;
+.main-card__slide {
+  width: 100%; }
+
+.slide-box {
+  padding: 150px 0px 150px;
   max-width: 100%;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   background-color: #1b0042;
-  max-height: 800px; }
-
-.slider {
-  height: 70vh;
-  color: #ffffff;
-  font-size: 36px; }
+  max-height: 800px;
+  width: 85%; }
 
 @media (max-width: 1190px) {
-  .main-card-page {
-    padding-left: 20px;
-    padding-right: 20px; } }
+  .slide-box {
+    padding-left: 45px; } }
 .slider {
   height: 85vh;
   background-color: #1b0042;
