--- a/src/assets/styles/css/PostContent.css
+++ b/src/assets/styles/css/PostContent.css
@@ -1,7 +1,8 @@
 .post-content {
   padding: 0 40px;
   font-family: "Open Sans", sans-serif;
-  color: #4a4a4a; }
+  color: #4a4a4a;
+  font-size: 20px; }
 
 @media (max-width: 1000px) {
   .post-content {
