--- a/src/redux/components/MainCardSliderComponent/MainCardSliderComponent.scss
+++ b/src/redux/components/MainCardSliderComponent/MainCardSliderComponent.scss
@@ -1,20 +1,18 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.main-card-page {
-  @include main-card(150px 100px 150px, 100%, $violet-color);
-  max-height: 800px;
+.main-card__slide {
+  width: 100%;
 }
 
-.slider {
-  height: 70vh;
-  color: $white-color;
-  font-size: $xxxl-font-size;
+.slide-box {
+  @include main-card(150px 0px 150px, 100%, $violet-color);
+  max-height: 800px;
+  width: 85%;
 }
 
 @media (max-width: 1190px) {
-  .main-card-page {
-    padding-left: 20px;
-    padding-right: 20px;
+  .slide-box {
+    padding-left: 45px;
   }
 }
 
