--- a/src/redux/components/PostContent/PostContent.scss
+++ b/src/redux/components/PostContent/PostContent.scss
@@ -4,6 +4,7 @@
   padding: 0 40px;
   font-family: $open-sans-font;
   color: #4a4a4a;
+  font-size: $lg-second-font-size;
 }
 
 @media (max-width: 1000px) {
