--- a/src/assets/styles/css/Content.css
+++ b/src/assets/styles/css/Content.css
@@ -1,9 +1,12 @@
 .content--md-font-size {
-  font-size: 16px; }
+  font-size: 16px;
+  color: #000000;
+  font-family: "Open Sans", sans-serif; }
 
 .content--lg-20px-font-size {
+  letter-spacing: -0.1px;
+  line-height: 30px;
   font-size: 20px;
-  font-size: 16px;
   color: #000000;
   font-family: "Open Sans", sans-serif; }
 
@@ -14,8 +17,5 @@
 @media (max-width: 500px) {
   .content--lg-20px-font-size {
     font-size: 16px;
-    color: #9b9b9b;
-    font-family: "Open Sans", sans-serif; }
-
-  .content--post-pd {
-    line-height: 30px; } }
+    color: #000000;
+    font-family: "Open Sans", sans-serif; } }
