--- a/src/redux/components/Content/Content.scss
+++ b/src/redux/components/Content/Content.scss
@@ -1,14 +1,14 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .content--md-font-size {
-  font-size: $md-font-size;
-}
-
-.content--lg-20px-font-size {
-  font-size: $lg-20px-font-size;
   @include text-styles($md-font-size, $black-color)
 }
 
+.content--lg-20px-font-size {
+  letter-spacing: -0.1px;
+  line-height: 30px;
+  @include text-styles($lg-20px-font-size, $black-color)
+}
 
 .content--post-pd {
   padding: 30px 0;
@@ -17,10 +17,6 @@
 
 @media (max-width: 500px) {
   .content--lg-20px-font-size {
-    @include text-styles($md-font-size, $light-gray-color);
-  }
-
-  .content--post-pd {
-    line-height: 30px;
+    @include text-styles($md-font-size, $black-color);
   }
 }
