--- a/src/assets/styles/css/PostsBox.css
+++ b/src/assets/styles/css/PostsBox.css
@@ -6,7 +6,7 @@
 @media (max-width: 1142px) {
   .posts-box {
     flex-direction: column;
-    align-items: center; } }
+    align-items: flex-start; } }
 @media (max-width: 600px) {
   .posts-box:hover * {
     cursor: auto; } }
