--- a/src/assets/styles/css/Wrapper.css
+++ b/src/assets/styles/css/Wrapper.css
@@ -1,3 +1,9 @@
 .wrapper {
   margin: 0 auto;
   max-width: 1170px; }
+
+@media (max-width: 1450px) {
+  .secondary-wrapper {
+    max-width: 1350px;
+    margin: 0 auto;
+    width: 90%; } }
