--- a/src/redux/components/PostsBox/PostsBox.scss
+++ b/src/redux/components/PostsBox/PostsBox.scss
@@ -7,7 +7,7 @@
 @media (max-width: 1142px) {
   .posts-box {
    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
 }
 
