--- a/src/redux/components/Wrapper/Wrapper.scss
+++ b/src/redux/components/Wrapper/Wrapper.scss
@@ -1,4 +1,13 @@
-.wrapper{
+.wrapper {
   margin: 0 auto;
   max-width: 1170px;
+  //width: 100%;
+}
+
+@media (max-width: 1450px) {
+  .secondary-wrapper {
+    max-width: 1350px;
+    margin: 0 auto;
+    width: 90%;
+  }
 }
