--- a/src/assets/styles/css/MainCardSliderComponent.css
+++ b/src/assets/styles/css/MainCardSliderComponent.css
@@ -2,7 +2,7 @@
   width: 100%; }
 
 .slide-box {
-  padding: 150px 0px 150px;
+  padding: 0px;
   max-width: 100%;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   background-color: #1b0042;
