--- a/src/assets/styles/css/ThematicBlogCard.css
+++ b/src/assets/styles/css/ThematicBlogCard.css
@@ -28,11 +28,8 @@
 
 @media (max-width: 850px) {
   .thematic-blog-card {
-    max-width: 80%; } }
-@media (max-width: 400px) {
-  .thematic-blog-card {
-    height: 30vh;
-    margin: 20px; } }
+    max-width: none;
+    height: auto; } }
 @media (max-width: 600px) {
   .thematic-blog-card__title--hovered:hover {
     color: black; } }
