--- a/src/redux/components/ImageBox/ImageBox.scss
+++ b/src/redux/components/ImageBox/ImageBox.scss
@@ -1,16 +1,18 @@
 .featured-img {
-  max-width: 573px;
-  max-height: 358px;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 8px;
 
   &--post-styles {
+    border-radius: 8px;
     max-width: 100%;
     max-height: 100%;
   }
 
   &--figure-styles {
+    border-radius: 8px;
     max-width: 300px;
-    margin: 20px;
+    padding: 20px;
   }
 
   &--hovered:hover {
@@ -19,52 +21,10 @@
   }
 }
 
-@media (max-width: 700px) {
-  .featured-img {
-    padding: 10px;
-    max-width: 473px;
-    max-height: 258px;
-  }
 
-  .featured-img--post-styles {
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-@media (max-width: 534px) {
-  .featured-img {
-    max-width: 323px;
-    max-height: 258px;
-  }
-}
-
-@media (max-width: 450px) {
-  .featured-img {
-    max-width: 300px;
-    max-height: 200px;
-  }
-}
-
-@media (max-width: 350px) {
-  .featured-img {
-    max-width: 293px;
-    max-height: 160px;
-  }
-}
-
-@media (max-width: 330px) {
-  .featured-img {
-    max-width: 230px;
-    max-height: 160px;
-  }
-}
-
-@media (max-width: 275px) {
-  .featured-img {
-    max-width: 150px;
-    max-height: 160px;
-  }
+.featured-img--post-styles {
+  display: block;
+  margin: 0 auto;
 }
 
 @media (max-width: 600px) {
