--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -7,7 +7,7 @@
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     background-color: #1b0042;
     background-color: #1b0042;
-    height: 41vh;
+    height: 44vh;
     color: #ffffff;
     border-radius: 8px; }
   .box-card__title {
@@ -18,13 +18,7 @@
     padding: 15px; } }
 @media (max-width: 550px) {
   .box-card__main-card {
-    height: 50vh; } }
-@media (max-width: 400px) {
-  .box-card__main-card {
-    height: 60vh; } }
-@media (max-width: 490px) {
-  .box-card__main-card {
-    height: 70vh; } }
+    height: auto; } }
 @media (max-width: 1340px) {
   .box-card {
     display: flex;
@@ -32,5 +26,5 @@
     align-items: flex-start; } }
 @media (max-width: 1142px) {
   .box-card {
-    width: 80%;
+    width: 100%;
     padding-right: 0px; } }
