--- a/src/assets/styles/css/Navigation.css
+++ b/src/assets/styles/css/Navigation.css
@@ -13,6 +13,9 @@
       border-radius: 10px;
       color: #ffffff; }
 
+@media (max-width: 800px) {
+  .navigation-bar {
+    padding: 8px; } }
 @media (max-width: 1000px) {
   .navigation-bar__link {
     margin: 15px; } }
