--- a/src/assets/styles/css/PostsBox.css
+++ b/src/assets/styles/css/PostsBox.css
@@ -7,6 +7,9 @@
   .posts-box {
     flex-direction: column;
     align-items: flex-start; } }
+@media (max-width: 805px) {
+  .posts-box {
+    padding: 50px 0px; } }
 @media (max-width: 600px) {
   .posts-box:hover * {
     cursor: auto; } }
