--- a/src/assets/styles/css/Title.css
+++ b/src/assets/styles/css/Title.css
@@ -8,10 +8,10 @@
 
 @media (max-width: 800px) {
   .title {
-    font-size: 24px; } }
+    line-height: 36px; } }
 @media (max-width: 400px) {
   .title {
-    font-size: 18px; } }
+    line-height: 26px; } }
 @media (max-width: 330px) {
   .title {
     font-size: 16px; } }
