--- a/src/assets/styles/css/Wrapper.css
+++ b/src/assets/styles/css/Wrapper.css
@@ -1,3 +1,10 @@
+html {
+  max-width: 100%;
+  overflow-x: hidden; }
+
+body {
+  overflow-x: hidden; }
+
 .wrapper {
   margin: 0 auto;
   max-width: 1170px; }
