--- a/src/redux/components/PostAuthor/PostAuthor.scss
+++ b/src/redux/components/PostAuthor/PostAuthor.scss
@@ -8,3 +8,20 @@
   text-transform: uppercase;
   font-family: $open-sans-font;
 }
+@media (max-width: 800px) {
+  .post-author  {
+    line-height: 36px;
+  }
+}
+
+@media (max-width: 460px) {
+  .post-author  {
+    line-height: 26px;
+  }
+}
+
+@media (max-width: 330px) {
+  .post-author  {
+    font-size: $md-font-size
+  }
+}
