--- a/src/redux/components/PostsBox/PostsBox.scss
+++ b/src/redux/components/PostsBox/PostsBox.scss
@@ -10,6 +10,12 @@
     align-items: flex-start;
   }
 }
+@media (max-width:805px) {
+  .posts-box {
+    padding: 50px 0px;
+  }
+}
+
 
 @media (max-width: 600px) {
   .posts-box:hover * {
