--- a/src/assets/styles/css/Post.css
+++ b/src/assets/styles/css/Post.css
@@ -10,3 +10,10 @@
   .post {
     padding-top: 70px;
     padding-bottom: 50px; } }
+.post__title {
+  padding-bottom: 30px; }
+
+@media (max-width: 1190px) {
+  .post__title {
+    padding-left: 25px;
+    padding-bottom: 20px; } }
