--- a/src/assets/styles/css/Wrapper.css
+++ b/src/assets/styles/css/Wrapper.css
@@ -1,8 +1,11 @@
 html {
+  width: 100%;
   max-width: 100%;
   overflow-x: hidden; }
 
 body {
+  width: 100%;
+  max-width: 100%;
   overflow-x: hidden; }
 
 .wrapper {
