--- a/src/redux/components/Post/Post.scss
+++ b/src/redux/components/Post/Post.scss
@@ -1,21 +1,31 @@
-.post{
+.post {
   padding-top: 20px;
   padding-bottom: 200px;
 }
 
 @media (max-width: 1000px) {
-  .post{
+  .post {
     padding-top: 70px;
     padding-bottom: 100px;
   }
 }
 
 @media (max-width: 805px) {
-  .post{
+  .post {
     padding-top: 70px;
     padding-bottom: 50px;
   }
 }
 
+.post__title {
+  padding-bottom: 30px;
+}
+
+@media (max-width: 1190px) {
+  .post__title {
+    padding-left: 25px;
+    padding-bottom: 20px;
+  }
+}
 
 
