--- a/src/redux/components/Wrapper/Wrapper.scss
+++ b/src/redux/components/Wrapper/Wrapper.scss
@@ -1,9 +1,12 @@
 html {
+  width: 100%;
   max-width: 100%;
   overflow-x: hidden;
 }
 
 body {
+  width: 100%;
+  max-width: 100%;
   overflow-x: hidden;
 }
 
