--- a/src/assets/styles/css/Header.css
+++ b/src/assets/styles/css/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  padding: 25px; }
+  padding: 25px 25px 25px 0px; }
 
 @media (max-width: 610px) {
   .header__flex-box {
