add new color variables

--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -4,9 +4,11 @@ $bold-font-weight: 600;
 $white-color: #ffffff;
 $pink: #ff5480;
 $black-color: #000000;
+$light-violet-color: #9283e0;
 $violet-color:  #1b0042;
 $violet-color-hovered: #220059;
 $light-gray-color: #9b9b9b;
+$dark-gray-color: #4a4a4a;
 $border-gray-color: #e6e6e6;
 $blue-color: #37cee6;
 
