--- a/src/redux/components/Author/Author.scss
+++ b/src/redux/components/Author/Author.scss
@@ -1,21 +1,23 @@
+@import '../../../assets/styles/scss/styles.scss';
+
 .author{
   font-style: normal;
   text-align: center;
-  color: #000;
-  margin: 30px;
+  color: $black-color;
+  padding: 30px;
   line-height: 25px;
-  font-weight: 600;
+  font-weight: $bold-font-weight;
   &__image{
-    margin-bottom: 15px;
+    padding-bottom: 20px;
   }
   &__name{
-    font-family: "Open Sans Semi Bold", sans-serif;
-    font-size: 18px;
+    font-family: $open-sans-font;
+    font-size: $lg-font-size;
     letter-spacing: -0.11px;
     text-transform: uppercase;
   }
   &__social{
-    font-size: 16px;
+    font-size: $md-font-size;
     letter-spacing: -0.1px;
     & > a{
       color: deepskyblue;
