--- a/src/redux/components/BreadCrumb/BreadCrumb.scss
+++ b/src/redux/components/BreadCrumb/BreadCrumb.scss
@@ -1,10 +1,12 @@
+@import '../../../assets/styles/scss/styles.scss';
+
 .bread-crumb{
   width: 100%;
   height: 19px;
-  color: #9b9b9b;
-  font-family: "Open Sans", sans-serif;
-  font-size: 12px;
-  margin: 30px 0 10px 0;
+  color: $light-gray-color;
+  font-family: $open-sans-font;
+  font-size: $sm-font-size;
+  padding: 30px 0 10px 0;
 }
 
 @media(max-width: 1200px) {
@@ -15,9 +17,8 @@
 
 @media(max-width: 805px) {
   .bread-crumb{
-    margin: 20px;
+    padding: 20px;
     width: 70%;
-    padding: 0;
   }
 }
 
