--- a/src/redux/components/Like/Like.scss
+++ b/src/redux/components/Like/Like.scss
@@ -2,7 +2,7 @@
 
 @media (max-width: 1190px) {
   .like-container{
-    margin-right: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -13,15 +13,15 @@
 }
 
 .like-card{
-  margin-bottom: 36px;
+  padding-bottom: 36px;
   text-align: center;
-  font-family: "Open Sans", sans-serif;
-  font-weight: bolder;
-  font-size: 20px;
+  font-family: $open-sans-font;
+  font-weight: $bold-font-weight;
+  font-size: $lg-second-font-size;
 }
 
 .like-icon{
-  font-size: 28px;
+  font-size: $xxl-font-size;
   width: 34px;
   height: 34px;
   color: $black-color;
