--- a/src/redux/components/PostContent/PostContent.scss
+++ b/src/redux/components/PostContent/PostContent.scss
@@ -3,7 +3,7 @@
 .post-content {
   padding: 0 40px;
   font-family: $open-sans-font;
-  color: #4a4a4a;
+  color: $dark-gray-color;
   font-size: $lg-second-font-size;
 }
 
@@ -20,6 +20,6 @@
 }
 
 .page-link {
-  color: #27aeff;
+  color: $blue-color;
   text-decoration: none;
 }
