--- a/src/redux/components/Author/Author.scss
+++ b/src/redux/components/Author/Author.scss
@@ -20,7 +20,7 @@
     font-size: $md-font-size;
     letter-spacing: -0.1px;
     & > a{
-      color: deepskyblue;
+      color: $blue-color;
       text-decoration: none;
     }
   }
