added PostMainCard, update

--- a/src/redux/components/OutlineButton/OutlineButton.scss
+++ b/src/redux/components/OutlineButton/OutlineButton.scss
@@ -3,7 +3,7 @@
 .outline-button {
   font-weight: $bold-font-weight;
   border-radius: 10px;
-  padding: 7px;
+  padding: 14px 20px;
   background-color:  #fafafa;
   text-decoration: none;
 
