--- a/src/assets/styles/css/BackgroundBlock.css
+++ b/src/assets/styles/css/BackgroundBlock.css
@@ -1,2 +1,4 @@
-.background-block {
+.background-block__new-page {
+  background-color: #ffffff; }
+.background-block__home-page {
   background-color: #1b0042; }
