--- a/src/assets/styles/css/OutlineButton.css
+++ b/src/assets/styles/css/OutlineButton.css
@@ -1,7 +1,7 @@
 .outline-button, .outline-button--pink, .outline-button--gray {
   font-weight: 600;
   border-radius: 10px;
-  padding: 7px;
+  padding: 14px 20px;
   background-color: #fafafa;
   text-decoration: none; }
   .outline-button--hovered:hover {
