--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -1,5 +1,12 @@
+.pagination-box {
+  padding: 20px 10px 60px 10px;
+  border-radius: 8px; }
+  .pagination-box--hovered:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer; }
+
 .pagination {
-  margin: 15px auto;
+  padding: 30px 0px;
   display: flex;
   list-style: none;
   outline: none; }
@@ -25,6 +32,3 @@
 
 .pagination > li > a, .pagination > li > span {
   color: #000000; }
-
-.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span {
-  border-radius: unset; }
