--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -10,6 +10,8 @@ $light-gray-color: #9b9b9b;
 $border-gray-color: #e6e6e6;
 $blue-color: #37cee6;
 $light-gray-secondary-color: #f1f1f1;
+
+$extra-xl-font-size:48px;
 $xxxl-font-size: 36px;
 $xxl-font-size: 28px;
 $xl-font-size: 24px;
