--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -6,7 +6,7 @@
     cursor: pointer; }
 
 .pagination {
-  padding: 30px 0px;
+  padding: 100px 0px 130px;
   display: flex;
   list-style: none;
   outline: none; }
