--- a/src/assets/styles/css/SubscribeBox.css
+++ b/src/assets/styles/css/SubscribeBox.css
@@ -3,6 +3,21 @@
   flex-direction: column; }
   .subscribe-box__content {
     font-weight: 600;
-    padding: 30px 0px 50px; }
+    padding: 30px 0px 50px;
+    text-align: center; }
   .subscribe-box__title {
-    padding: 20px 0px; }
+    padding: 20px 0px;
+    text-align: center; }
+
+.subscribe-input {
+  position: relative; }
+  .subscribe-input__email {
+    position: absolute;
+    left: 70px;
+    border: none;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+    width: 55%;
+    border-radius: 40px; }
+  .subscribe-input__button {
+    position: absolute;
+    left: 370px; }
