--- a/src/assets/styles/css/SubscribeForm.css
+++ b/src/assets/styles/css/SubscribeForm.css
@@ -1,6 +1,8 @@
 .subscribe-input {
-  position: relative; }
+  position: relative;
+  padding: 19px; }
   .subscribe-input__email {
+    padding: 19px;
     position: absolute;
     left: 70px;
     border: none;
@@ -9,4 +11,4 @@
     border-radius: 40px 40px 40px 40px; }
   .subscribe-input__button {
     position: absolute;
-    left: 370px; }
+    left: 390px; }
