--- a/src/redux/components/SubscribeBox/SubscribeBox.scss
+++ b/src/redux/components/SubscribeBox/SubscribeBox.scss
@@ -1,13 +1,33 @@
 .subscribe-box {
-display: flex;
+  display: flex;
   flex-direction: column;
 
   &__content {
     font-weight: 600;
     padding: 30px 0px 50px;
+    text-align: center;
   }
 
   &__title {
-    padding: 20px 0px
+    padding: 20px 0px;
+    text-align: center;
+  }
+}
+
+.subscribe-input {
+  position: relative;
+
+  &__email {
+    position: absolute;
+    left: 70px;
+    border: none;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+    width: 55%;
+    border-radius: 40px;
+  }
+
+  &__button {
+    position: absolute;
+    left: 370px;
   }
 }
