--- a/src/assets/styles/css/Header.css
+++ b/src/assets/styles/css/Header.css
@@ -3,3 +3,11 @@
   justify-content: space-between;
   align-items: baseline;
   padding: 25px 25px 25px 0px; }
+
+@media (max-width: 805px) {
+  .header {
+    justify-content: flex-end;
+    align-items: center; } }
+@media (max-width: 805px) {
+  .header__nav {
+    display: none; } }
