--- a/src/assets/styles/css/Logo.css
+++ b/src/assets/styles/css/Logo.css
@@ -1,9 +1,9 @@
 .logo--black-color {
   padding-bottom: 7px; }
 
-@media (max-width: 680px) {
+@media (max-width: 805px) {
   .logo--black-color {
-    padding: 10px; } }
+    vertical-align: baseline; } }
 .logo--gray-color {
   filter: opacity(0.5); }
 
