--- a/src/redux/components/SearchIcon/SearchIcon.scss
+++ b/src/redux/components/SearchIcon/SearchIcon.scss
@@ -1,6 +1,8 @@
-@import '../../../assets/styles/scss/styles.scss';
-
 .search-icon--black-color {
-  color: $black-color;
   padding-top: 15px;
+}
+@media (max-width: 805px) {
+  .search-icon--black-color{
+    padding: 0px;
+  }
 }
