--- a/src/assets/styles/css/CommentPolicyBox.css
+++ b/src/assets/styles/css/CommentPolicyBox.css
@@ -3,3 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 50px 0px; }
+
+@media (max-width: 335px) {
+  .comment-policy-box {
+    flex-direction: column; } }
