--- a/src/assets/styles/css/OutlineButton.css
+++ b/src/assets/styles/css/OutlineButton.css
@@ -1,7 +1,7 @@
 .outline-button, .outline-button--pink, .outline-button--gray {
   font-weight: 600;
   border-radius: 10px;
-  padding: 14px 20px;
+  padding: 14px 15px;
   background-color: #fafafa;
   text-decoration: none; }
   .outline-button--hovered:hover {
@@ -19,3 +19,10 @@
   color: #9b9b9b;
   font-family: "Open Sans", sans-serif;
   border: 2px solid #e6e6e6; }
+
+@media (max-width: 360px) {
+  .outline-button--pink {
+    padding: 10px; } }
+@media (max-width: 335px) {
+  .outline-button--pink {
+    margin-top: 20px; } }
