--- a/src/assets/styles/css/SearchIcon.css
+++ b/src/assets/styles/css/SearchIcon.css
@@ -1,3 +1,6 @@
 .search-icon--black-color {
-  color: #000000;
   padding-top: 15px; }
+
+@media (max-width: 805px) {
+  .search-icon--black-color {
+    padding: 0px; } }
