--- a/src/redux/components/CommentPolicyBox/CommentPolicyBox.scss
+++ b/src/redux/components/CommentPolicyBox/CommentPolicyBox.scss
@@ -4,3 +4,9 @@
   align-items:center;
   padding: 50px 0px;
 }
+
+@media (max-width: 335px) {
+  .comment-policy-box  {
+    flex-direction: column;
+  }
+}
