--- a/src/redux/components/CommentsBox/CommentsBox.scss
+++ b/src/redux/components/CommentsBox/CommentsBox.scss
@@ -12,3 +12,14 @@
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   background-color: $white-color;
 }
+
+@media (max-width: 400px) {
+  .form-box {
+    padding:40px 20px;
+  }
+}
+@media (max-width: 395px) {
+  .form-box {
+    padding:40px 5px;
+  }
+}
