--- a/src/redux/components/Header/Header.scss
+++ b/src/redux/components/Header/Header.scss
@@ -4,10 +4,14 @@
   align-items: baseline;
   padding: 25px 25px 25px 0px;
 }
-
-
-//@media (max-width: 805px) {
-//  .header {
-//    display: none;
-//  }
-//}
+@media (max-width: 805px) {
+  .header {
+    justify-content: flex-end;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 805px) {
+  .header__nav {
+    display: none;
+  }
+}
