--- a/src/redux/components/SidebarSlider/SidebarSlider.scss
+++ b/src/redux/components/SidebarSlider/SidebarSlider.scss
@@ -1,6 +1,7 @@
+@import '../../../assets/styles/scss/styles.scss';
+
 .author-slider{
   width: 100%;
-  max-width: 380px;
 
   &__slide{
     margin: 5px;
@@ -11,6 +12,7 @@
     height: 100%;
     margin: 0 auto;
     width: 197px;
+    background-color: $white-color;
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   }
