--- a/src/redux/components/Calendar/Calendar.scss
+++ b/src/redux/components/Calendar/Calendar.scss
@@ -1,8 +1,13 @@
 @import '../../../assets/styles/scss/styles.scss';
 
+.DayPicker{
+  display: block;
+}
+
 .DayPicker-wrapper {
-  width: 380px;
+  width: 100%;
   height: 355px;
+  padding-bottom: 40px;
   font-family: $open-sans-font;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
@@ -28,14 +33,14 @@
 .DayPicker-Caption > div {
   text-align: center;
   color: $black-color;
-  font-size: $sm-font-size;
+  font-size: $md-font-size;
   font-weight: $bold-font-weight;
 }
 
 .DayPicker-Caption {
   margin-top: 30px;
   display: table-caption;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 .DayPicker-NavButton {
