--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -1,12 +1,14 @@
 .pagination-box {
   padding: 20px 10px 60px 10px;
   border-radius: 8px; }
+  .pagination-box__main-card {
+    margin: 30px 0px; }
   .pagination-box--hovered:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     cursor: pointer; }
 
 .pagination {
-  padding: 100px 0px 130px;
+  padding: 100px 0px 0px;
   display: flex;
   list-style: none;
   outline: none; }
