--- a/src/redux/components/Icon/Icon.scss
+++ b/src/redux/components/Icon/Icon.scss
@@ -1,7 +1,39 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.fa {
+.icon {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  width: 26px;
+  height: 25px;
+  align-items: center;
+  background-color: $light-gray-color;
+  border-radius: 25px;
+  margin: 5px;
+  font-size: $sm-font-size;
 
+  &--post-styles {
+    @extend .icon;
+    margin-bottom: 20px;
+    font-size: 22px;
+    width: 36px;
+    height: 35px;
+  }
+}
+
+@media (max-width: 1190px) {
+  .icon--post-styles {
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 805px) {
+  .icon--post-styles {
+    display: none;
+  }
+}
+
+.fa {
   &--hovered:hover {
     color: $pink;
     cursor: pointer;
@@ -19,47 +51,6 @@
 }
 
 .fa__footer {
-  width: 24px;
+  width: 35px;
   color: $white-color;
 }
-
-.icon {
-  text-align: center;
-  background-color: $light-gray-color;
-  border-radius: 25px;
-  padding: 6px 2px;
-  margin: 5px;
-
-  &--post-styles {
-    @extend .icon;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin-bottom: 20px;
-    font-size: 22px;
-    width: 35px;
-    height: 35px;
-  }
-}
-
-@media (max-width: 1190px) {
-  .icon--post-styles {
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 805px) {
-  .icon--post-styles {
-    display: none;
-  }
-}
-
-@media (max-width: 805px) {
-  .fa__footer {
-    margin: 10px;
-    padding-bottom: 10px;
-  }
-}
-
-
