--- a/src/redux/components/Pagination/Pagination.scss
+++ b/src/redux/components/Pagination/Pagination.scss
@@ -3,7 +3,9 @@
 .pagination-box {
   padding: 20px 10px 60px 10px;
   border-radius: 8px;
-
+  &__main-card{
+    margin: 30px 0px;
+  }
   &--hovered:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     cursor: pointer;
@@ -11,7 +13,7 @@
 }
 
 .pagination {
-  padding:100px 0px 130px;
+  padding: 100px 0px 0px;
   display: flex;
   list-style: none;
   outline: none;
