--- a/src/assets/styles/css/Calendar.css
+++ b/src/assets/styles/css/Calendar.css
@@ -1,6 +1,10 @@
+.DayPicker {
+  display: block; }
+
 .DayPicker-wrapper {
-  width: 380px;
+  width: 100%;
   height: 355px;
+  padding-bottom: 40px;
   font-family: "Open Sans", sans-serif;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
@@ -24,13 +28,13 @@
 .DayPicker-Caption > div {
   text-align: center;
   color: #000000;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 600; }
 
 .DayPicker-Caption {
   margin-top: 30px;
   display: table-caption;
-  margin-bottom: 25px; }
+  margin-bottom: 50px; }
 
 .DayPicker-NavButton {
   top: 35px;
