--- a/src/redux/components/SidebarSocial/SidebarSocial.scss
+++ b/src/redux/components/SidebarSocial/SidebarSocial.scss
@@ -1,6 +1,19 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .social-icons{
-  padding: 30px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding-bottom: 30px;
+  &--pink{
+    background-color: $pink;
+    &:hover{
+      background-color: $white-color;
+    }
+  }
+  &--big{
+    width: 40px;
+    height: 40px;
+    font-size: $lg-font-size;
+  }
 }
