--- a/src/redux/components/SubscribeSmallBox/SubscribeSmallBox.scss
+++ b/src/redux/components/SubscribeSmallBox/SubscribeSmallBox.scss
@@ -2,9 +2,16 @@
 
 .subscribe-small-box {
   background-color: $white-color;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
   position: relative;
-  width: 378px;
+  width: 100%;
   height: 188px;
+  margin-bottom: 20px;
+
+  &__form{
+    padding-top: 30px;
+  }
 
   &__title {
     text-align: center;
