--- a/src/redux/components/AuthorSidebar/AuthorSidebar.scss
+++ b/src/redux/components/AuthorSidebar/AuthorSidebar.scss
@@ -1,3 +1,24 @@
 .author-sidebar{
   width: 35%;
+  padding-left: 10px;
+}
+
+@media(max-width: 1200px) {
+  .author-sidebar{
+    width: 100%;
+    max-width: 800px;
+    padding: 0;
+  }
+}
+
+@media(max-width: 850px) {
+  .author-sidebar{
+    max-width: 500px;
+  }
+}
+
+@media(max-width: 530px) {
+  .author-sidebar{
+    max-width: 320px;
+  }
 }
