--- a/src/redux/components/Box/Box.scss
+++ b/src/redux/components/Box/Box.scss
@@ -3,3 +3,10 @@
   justify-content: space-between;
   width: 100%;
 }
+
+@media(max-width: 1200px) {
+  .box{
+    flex-direction: column;
+    align-items: center;
+  }
+}
