--- a/src/redux/components/Calendar/Calendar.scss
+++ b/src/redux/components/Calendar/Calendar.scss
@@ -4,6 +4,12 @@
   display: block;
 }
 
+@media(max-width: 1200px) {
+  .DayPicker{
+    display: none;
+  }
+}
+
 .DayPicker-wrapper {
   width: 100%;
   height: 355px;
