--- a/src/redux/components/SubscribeBox/SubscribeBox.scss
+++ b/src/redux/components/SubscribeBox/SubscribeBox.scss
@@ -1,17 +1,23 @@
 .subscribe-box {
   display: flex;
   flex-direction: column;
-  padding: 150px 0px;
+  padding: 150px 0;
 
   &__content {
     font-weight: 600;
-    padding: 30px 0px 50px;
+    padding: 30px 0 50px;
     text-align: center;
   }
 
   &__title {
-    padding: 20px 0px;
+    padding: 20px 0;
     text-align: center;
+  }
+}
+
+@media(max-width: 1100px) {
+  .subscribe-box{
+    display: none;
   }
 }
 
@@ -29,6 +35,7 @@
 
   &__button {
     position: absolute;
-    left: 370px;
+    padding: 9px;
+    right: 200px;
   }
 }
