--- a/src/assets/styles/css/BreadCrumb.css
+++ b/src/assets/styles/css/BreadCrumb.css
@@ -8,6 +8,7 @@
 
 @media (max-width: 1200px) {
   .bread-crumb {
+    text-align: center;
     padding-left: 10px; } }
 @media (max-width: 805px) {
   .bread-crumb {
