--- a/src/assets/styles/css/AuthorSidebar.css
+++ b/src/assets/styles/css/AuthorSidebar.css
@@ -1,2 +1,18 @@
 .author-sidebar {
-  width: 35%; }
+  width: 35%;
+  padding-left: 10px; }
+
+@media (max-width: 1200px) {
+  .author-sidebar {
+    width: 100%;
+    max-width: 800px;
+    padding: 0; } }
+@media (max-width: 1100px) {
+  .author-sidebar {
+    padding: 70px 0px; } }
+@media (max-width: 850px) {
+  .author-sidebar {
+    max-width: 500px; } }
+@media (max-width: 530px) {
+  .author-sidebar {
+    max-width: 320px; } }
