--- a/src/assets/styles/css/Box.css
+++ b/src/assets/styles/css/Box.css
@@ -2,3 +2,8 @@
   display: flex;
   justify-content: space-between;
   width: 100%; }
+
+@media (max-width: 1200px) {
+  .box {
+    flex-direction: column;
+    align-items: center; } }
