--- a/src/assets/styles/css/Calendar.css
+++ b/src/assets/styles/css/Calendar.css
@@ -1,6 +1,9 @@
 .DayPicker {
   display: block; }
 
+@media (max-width: 1200px) {
+  .DayPicker {
+    display: none; } }
 .DayPicker-wrapper {
   width: 100%;
   height: 355px;
