--- a/src/assets/styles/css/SubscribeBox.css
+++ b/src/assets/styles/css/SubscribeBox.css
@@ -1,15 +1,18 @@
 .subscribe-box {
   display: flex;
   flex-direction: column;
-  padding: 150px 0px; }
+  padding: 150px 0; }
   .subscribe-box__content {
     font-weight: 600;
-    padding: 30px 0px 50px;
+    padding: 30px 0 50px;
     text-align: center; }
   .subscribe-box__title {
-    padding: 20px 0px;
+    padding: 20px 0;
     text-align: center; }
 
+@media (max-width: 1100px) {
+  .subscribe-box {
+    display: none; } }
 .subscribe-input {
   position: relative; }
   .subscribe-input__email {
@@ -21,4 +24,5 @@
     border-radius: 40px; }
   .subscribe-input__button {
     position: absolute;
-    left: 370px; }
+    padding: 9.5px 20px;
+    right: 200px; }
