--- a/src/assets/styles/css/SubscribeSmallBox.css
+++ b/src/assets/styles/css/SubscribeSmallBox.css
@@ -1,14 +1,20 @@
 .subscribe-small-box {
   background-color: #ffffff;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
   position: relative;
-  width: 378px;
-  height: 188px; }
+  width: 100%;
+  height: 188px;
+  margin-bottom: 20px; }
+  .subscribe-small-box__form {
+    padding-top: 30px; }
   .subscribe-small-box__title {
     text-align: center;
-    padding: 10px 0px;
+    padding: 30px 0px 0px;
     font-weight: 600;
     line-height: 30px; }
   .subscribe-small-box__email {
+    padding: 13px;
     border-radius: 40px;
     position: absolute;
     left: 70px;
@@ -17,7 +23,26 @@
     width: 55%; }
   .subscribe-small-box__button {
     border-radius: 40px;
-    padding: 15px;
+    padding: 14px 20px;
     font-size: 14px;
     position: absolute;
-    left: 270px; }
+    right: 50px; }
+
+@media (max-width: 1200px) {
+  .subscribe-small-box__email {
+    left: 150px; }
+
+  .subscribe-small-box__button {
+    right: 180px; } }
+@media (max-width: 850px) {
+  .subscribe-small-box__email {
+    left: 90px; }
+
+  .subscribe-small-box__button {
+    right: 100px; } }
+@media (max-width: 530px) {
+  .subscribe-small-box__email {
+    left: 35px; }
+
+  .subscribe-small-box__button {
+    right: 35px; } }
