--- a/src/redux/components/SubscribeSmallBox/SubscribeSmallBox.scss
+++ b/src/redux/components/SubscribeSmallBox/SubscribeSmallBox.scss
@@ -15,12 +15,13 @@
 
   &__title {
     text-align: center;
-    padding: 10px 0;
+    padding: 30px 0px 0px;
     font-weight: $bold-font-weight;
     line-height: 30px;
   }
 
   &__email {
+    padding: 13px;
     border-radius: 40px;
     position: absolute;
     left: 70px;
@@ -31,7 +32,7 @@
 
   &__button {
     border-radius: 40px;
-    padding: 15px;
+    padding: 14px 20px;
     font-size: $sm-font-size;
     position: absolute;
     right: 50px;
