--- a/src/redux/components/MainCardSliderComponent/MainCardSliderComponent.scss
+++ b/src/redux/components/MainCardSliderComponent/MainCardSliderComponent.scss
@@ -1,60 +1,84 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.main-card__slide-box {
+.main-slider{
   width: 100%;
-  padding-top: 150px;
-}
-@media (max-width: 500px) {
-  .main-card__slide-box {
-    padding-top: 35px;
-  }
-}
-.slide-box {
-  @include main-card( 100px 0 0 0, 100%, $violet-color);
-  max-height: 800px;
-  width: 85%;
-}
 
-@media(max-height: 580px) {
-  .slide-box {
-    @include main-card( 40px 0 0 0, 100%, $violet-color);
-    max-height: 800px;
-    width: 85%;
+  &__slide{
+    color: $white-color;
+    height: 600px;
+
+    &__content{
+      height: 100%;
+      display: flex;
+      align-items: center;
+    }
   }
 }
 
-@media (max-width: 1190px) {
-  .slide-box {
-    padding-left: 45px;
+@media(max-width: 1200px) {
+
+  .main-slider__slide__content{
+    justify-content: center;
   }
 }
 
-.slider {
-  height: 85vh;
-  background-color: $violet-color;
-  color: $white-color;
-  font-size: $xxxl-font-size;
+@media(max-width: 1000px) {
+  .main-slider__slide{
+    height: 400px;
+  }
 }
 
-.slick-dots {
+@media(max-width: 980px) {
+  .main-slider__slide__content{
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+
+@media(max-width: 800px) {
+  .main-slider__slide{
+    height: 520px;
+  }
+}
+
+@media(max-width: 350px) {
+  .main-slider__slide{
+    height: 570px;
+  }
+
+  .main-slider__slide__content{
+    align-items: baseline;
+  }
+}
+
+.slick-dots{
+  display: flex;
   position: absolute;
   bottom: 20px;
-  font-size: 0;
+  color: $white-color;
+}
+
+@media(max-width: 1200px) {
+  .slick-dots{
+    justify-content: center;
+  }
 }
 
 .slick-dots li {
-  background-color: white;
+  background-color: $white-color;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  font-size: 0;
+  width: 15px;
+  height: 15px;
 }
 
-div.slick-dots {
-  display: none;
+@media(max-width: 1000px) {
+  .slick-dots li{
+    width: 22px;
+    height: 22px;
+  }
 }
 
 li.slick-active {
-  background-color: pink;
-  border-radius: 50%;
+  color: $pink;
+  background-color: $pink;
 }
