--- a/src/assets/styles/css/ThematicBlogCard.css
+++ b/src/assets/styles/css/ThematicBlogCard.css
@@ -1,7 +1,7 @@
 .thematic-blog-card {
   font-family: "Open Sans", sans-serif;
   padding: 25px;
-  height: 16.2vh;
+  height: 117px;
   max-width: 276px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
