--- a/src/redux/components/SubscribeSmallBox/SubscribeSmallBox.scss
+++ b/src/redux/components/SubscribeSmallBox/SubscribeSmallBox.scss
@@ -9,7 +9,7 @@
   height: 188px;
   margin-bottom: 20px;
 
-  &__form{
+  &__form {
     padding-top: 30px;
   }
 
@@ -39,32 +39,40 @@
   }
 }
 
-@media(max-width: 1200px) {
-  .subscribe-small-box__email{
-    left: 150px;
-  }
-
-  .subscribe-small-box__button{
-    right: 180px;
+@media(max-width: 1200px)and (min-width: 600px) {
+  .subscribe-small-box {
+    display: none;
   }
 }
 
-@media(max-width: 850px) {
-  .subscribe-small-box__email{
-    left: 90px;
+@media(max-width: 600px) {
+  .subscribe-small-box__email {
+    left: 55px;
   }
 
-  .subscribe-small-box__button{
-    right: 100px;
+  .subscribe-small-box__button {
+    right: 80px;
   }
 }
 
 @media(max-width: 530px) {
-  .subscribe-small-box__email{
-    left: 35px;
+  .subscribe-small-box__email {
+    padding: 7px 10px;
+    font-size: 12px;
   }
 
-  .subscribe-small-box__button{
-    right: 35px;
+  .subscribe-small-box__button {
+    padding: 6px 10px;
+  }
+}
+
+@media(max-width: 380px) {
+  .subscribe-small-box__button {
+    right: 40px;
+  }
+}
+@media(max-width: 285px) {
+  .subscribe-small-box__button {
+    right: 20px;
   }
 }
