--- a/src/assets/styles/css/AuthorTheme.css
+++ b/src/assets/styles/css/AuthorTheme.css
@@ -4,11 +4,4 @@
 
 @media (max-width: 1200px) {
   .author-theme {
-    width: 100%;
-    max-width: 800px; } }
-@media (max-width: 850px) {
-  .author-theme {
-    max-width: 500px; } }
-@media (max-width: 530px) {
-  .author-theme {
-    max-width: 320px; } }
+    width: 100%; } }
