--- a/src/assets/styles/css/MainCardSliderComponent.css
+++ b/src/assets/styles/css/MainCardSliderComponent.css
@@ -1,50 +1,51 @@
-.main-card__slide-box {
-  width: 100%;
-  padding-top: 150px; }
+.main-slider {
+  width: 100%; }
+  .main-slider__slide {
+    color: #ffffff;
+    height: 600px; }
+    .main-slider__slide__content {
+      height: 100%;
+      display: flex;
+      align-items: center; }
 
-@media (max-width: 500px) {
-  .main-card__slide-box {
-    padding-top: 35px; } }
-.slide-box {
-  padding: 100px 0 0 0;
-  max-width: 100%;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
-  background-color: #1b0042;
-  max-height: 800px;
-  width: 85%; }
+@media (max-width: 1200px) {
+  .main-slider__slide__content {
+    justify-content: center; } }
+@media (max-width: 1000px) {
+  .main-slider__slide {
+    height: 400px; } }
+@media (max-width: 980px) {
+  .main-slider__slide__content {
+    width: 60%;
+    margin: 0 auto; } }
+@media (max-width: 800px) {
+  .main-slider__slide {
+    height: 520px; } }
+@media (max-width: 350px) {
+  .main-slider__slide {
+    height: 570px; }
 
-@media (max-height: 580px) {
-  .slide-box {
-    padding: 40px 0 0 0;
-    max-width: 100%;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
-    background-color: #1b0042;
-    max-height: 800px;
-    width: 85%; } }
-@media (max-width: 1190px) {
-  .slide-box {
-    padding-left: 45px; } }
-.slider {
-  height: 85vh;
-  background-color: #1b0042;
-  color: #ffffff;
-  font-size: 36px; }
-
+  .main-slider__slide__content {
+    align-items: baseline; } }
 .slick-dots {
+  display: flex;
   position: absolute;
   bottom: 20px;
-  font-size: 0; }
+  color: #ffffff; }
 
+@media (max-width: 1200px) {
+  .slick-dots {
+    justify-content: center; } }
 .slick-dots li {
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  font-size: 0; }
+  width: 15px;
+  height: 15px; }
 
-div.slick-dots {
-  display: none; }
-
+@media (max-width: 1000px) {
+  .slick-dots li {
+    width: 22px;
+    height: 22px; } }
 li.slick-active {
-  background-color: pink;
-  border-radius: 50%; }
+  color: #ff5480;
+  background-color: #ff5480; }
