--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -9,7 +9,7 @@
 
 @media (max-width: 600px) {
   .pagination-box {
-    padding: 0; } }
+    padding: 20px 10px 15px 10px; } }
 .pagination {
   padding: 100px 0 0;
   display: flex;
@@ -39,13 +39,13 @@
     padding: 10px 15px; } }
 @media (max-width: 540px) {
   .pagination > li > a {
-    font-size: 12px;
-    margin: 0; } }
-@media (max-width: 540px) {
-  .pagination > li > a {
     font-size: 10px;
     padding: 8px 13px;
     margin: 1px; } }
+@media (max-width: 365px) {
+  .pagination > li > a {
+    font-size: 12px;
+    padding: 5px 8px; } }
 .pagination > .active > a,
 .pagination > .active > span,
 .pagination > .active > a:hover,
