--- a/src/assets/styles/css/SubscribeBox.css
+++ b/src/assets/styles/css/SubscribeBox.css
@@ -1,14 +1,13 @@
 .subscribe-box {
   display: flex;
   flex-direction: column;
-  padding: 150px 0; }
+  padding: 150px 0;
+  text-align: center; }
   .subscribe-box__content {
     font-weight: 600;
-    padding: 30px 0 50px;
-    text-align: center; }
+    padding: 30px 0 50px; }
   .subscribe-box__title {
-    padding: 20px 0;
-    text-align: center; }
+    padding: 20px 0; }
 
 @media (max-width: 1100px) {
   .subscribe-box {
@@ -16,13 +15,15 @@
 .subscribe-input {
   position: relative; }
   .subscribe-input__email {
-    position: absolute;
-    left: 70px;
     border: none;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     width: 55%;
     border-radius: 40px; }
   .subscribe-input__button {
     position: absolute;
-    padding: 9.5px 20px;
-    right: 200px; }
+    right: 120px;
+    padding: 9.5px 20px; }
+
+@media (max-width: 1200px) {
+  .subscribe-input__button {
+    right: 160px; } }
