--- a/src/redux/components/Pagination/Pagination.scss
+++ b/src/redux/components/Pagination/Pagination.scss
@@ -3,9 +3,11 @@
 .pagination-box {
   padding: 20px 10px 60px 10px;
   border-radius: 8px;
-  &__main-card{
+
+  &__main-card {
     margin: 30px 0;
   }
+
   &--hovered:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     cursor: pointer;
@@ -13,10 +15,11 @@
 }
 
 @media(max-width: 600px) {
-  .pagination-box{
-    padding: 0;
+  .pagination-box {
+    padding: 20px 10px 15px 10px;
   }
 }
+
 
 .pagination {
   padding: 100px 0 0;
@@ -26,7 +29,7 @@
 }
 
 @media(max-width: 1100px) {
-  .pagination{
+  .pagination {
     padding: 0;
   }
 }
@@ -46,27 +49,25 @@
 }
 
 @media(max-width: 870px) {
-  .pagination > li > a{
+  .pagination > li > a {
     border-radius: 50%;
     padding: 10px 15px;
   }
 }
 
 @media(max-width: 540px) {
-  .pagination > li > a{
-    font-size: 12px;
-    margin: 0;
-  }
-}
-
-@media(max-width: 540px) {
-  .pagination > li > a{
+  .pagination > li > a {
     font-size: 10px;
     padding: 8px 13px;
     margin: 1px;
   }
 }
-
+@media(max-width: 365px) {
+  .pagination > li > a {
+    font-size: 12px;
+    padding: 5px 8px;
+  }
+}
 .pagination > .active > a,
 .pagination > .active > span,
 .pagination > .active > a:hover,
