--- a/src/assets/styles/css/SidebarSearchBar.css
+++ b/src/assets/styles/css/SidebarSearchBar.css
@@ -1,22 +1,22 @@
-.searchbar {
+.search-bar {
   text-align: center;
   padding: 20px;
   font-size: 14px;
   color: #9b9b9b;
   font-family: "Open Sans", sans-serif; }
-  .searchbar__input {
+  .search-bar__input {
     width: 80%;
     max-width: 320px;
     border: 0;
     outline: none; }
-  .searchbar__icon {
+  .search-bar__icon {
     color: #000000;
     font-size: 24px; }
 
-.searchbar__icon:hover {
+.search-bar__icon:hover {
   color: #ff5480;
   cursor: pointer; }
 
 @media (max-width: 1200px) {
-  .searchbar__input {
+  .search-bar__input {
     max-width: 500px; } }
