--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -5,7 +5,8 @@
   border-radius: 8px;
 
   &__main-card {
-    margin: 30px 0;
+    margin: 60px 0;
+    max-height: 500px;
   }
 
   &--hovered:hover {
@@ -19,7 +20,6 @@
     padding: 20px 10px 15px 10px;
   }
 }
-
 
 .pagination {
   padding: 100px 0 0;
