--- a/src/assets/styles/css/User.css
+++ b/src/assets/styles/css/User.css
@@ -2,7 +2,7 @@
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
   background-color: #ffffff;
-  padding-bottom: 30px; }
+  padding: 40px 0px 40px; }
   .user__icons {
     display: flex;
     justify-content: center;
