--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -4,7 +4,7 @@
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
   background-color: $white-color;
-  padding-bottom: 30px;
+  padding: 40px 0px 40px;
 
   &__icons {
     display: flex;
