--- a/src/assets/styles/css/CommentsFormComponent.css
+++ b/src/assets/styles/css/CommentsFormComponent.css
@@ -5,6 +5,10 @@
   width: 90%;
   padding: 40px 0px; }
 
+@media (max-width: 500px) {
+  .comments-form__button {
+    padding: 10px 15px;
+    font-size: 18px; } }
 .textarea {
   resize: none; }
 
