--- a/src/assets/styles/css/AuthorTheme.css
+++ b/src/assets/styles/css/AuthorTheme.css
@@ -5,3 +5,6 @@
 @media (max-width: 1200px) {
   .author-theme {
     width: 100%; } }
+@media (max-width: 630px) {
+  .author-theme {
+    padding-bottom: 0px; } }
