--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -28,3 +28,6 @@
   .box-card {
     width: 100%;
     padding-right: 0; } }
+@media (max-width: 470px) {
+  .box-card__title {
+    font-size: 28px; } }
