--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -5,9 +5,12 @@
     margin: 60px 0;
     max-height: 500px; }
   .pagination-box--hovered:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     cursor: pointer; }
 
+@media (max-width: 1200px) {
+  .pagination-box__main-card {
+    max-height: none;
+    margin: 20px 10px 15px 10px; } }
 @media (max-width: 600px) {
   .pagination-box {
     padding: 20px 10px 15px 10px; } }
@@ -19,7 +22,7 @@
 
 @media (max-width: 1100px) {
   .pagination {
-    padding: 0; } }
+    padding: 30px; } }
 .pagination > .active > a {
   color: #fff; }
 
