--- a/src/components/CommentsFormComponent/CommentsFormComponent.scss
+++ b/src/components/CommentsFormComponent/CommentsFormComponent.scss
@@ -6,6 +6,14 @@
   display: grid;
   width: 90%;
   padding: 40px 0px;
+
+}
+
+@media (max-width: 500px) {
+  .comments-form__button {
+    padding: 10px 15px;
+    font-size: $lg-font-size;
+  }
 }
 
 .textarea {
