--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -10,8 +10,14 @@
   }
 
   &--hovered:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+  }
+}
+
+@media (max-width: 1200px) {
+  .pagination-box__main-card {
+    max-height: none;
+    margin: 20px 10px 15px 10px;
   }
 }
 
@@ -30,7 +36,7 @@
 
 @media(max-width: 1100px) {
   .pagination {
-    padding: 0;
+    padding: 30px;
   }
 }
 
@@ -62,12 +68,14 @@
     margin: 1px;
   }
 }
+
 @media(max-width: 365px) {
   .pagination > li > a {
     font-size: 12px;
     padding: 5px 8px;
   }
 }
+
 .pagination > .active > a,
 .pagination > .active > span,
 .pagination > .active > a:hover,
