--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -1,13 +1,8 @@
+@import '../../assets/styles/scss/styles.scss';
+
 .post {
   padding-top: 20px;
   padding-bottom: 200px;
-}
-
-@media (max-width: 1190px) {
-  .post__title {
-    padding-left: 25px;
-    padding-bottom: 20px;
-  }
 }
 
 @media (max-width: 1000px) {
@@ -26,4 +21,23 @@
 
 .post__title {
   padding-bottom: 30px;
+}
+
+@media (max-width: 1190px) {
+  .post__title {
+    padding-left: 25px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (max-width: 510px) {
+  .post__title {
+    font-size: $xxl-font-size;
+  }
+}
+
+@media (max-width: 377px) {
+  .post__title {
+    font-size: $xl-font-size;
+  }
 }
