--- a/src/assets/styles/css/EmailInput.css
+++ b/src/assets/styles/css/EmailInput.css
@@ -2,5 +2,4 @@
   font-size: 16px;
   color: #000000;
   font-family: "Open Sans", sans-serif;
-  border: 2px solid #e6e6e6;
-  padding: 15px; }
+  border: 2px solid #e6e6e6; }
