--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -1,6 +1,6 @@
 .pagination-box {
   padding: 20px 10px 60px 10px;
-  border-radius: 8px; }
+  border-radius: 50%; }
   .pagination-box__main-card {
     margin: 60px 0;
     max-height: 500px; }
@@ -33,13 +33,12 @@
   padding: 20px 25px;
   margin: 6px;
   background-color: #f1f1f1;
-  border-radius: 50px;
+  border-radius: 50%;
   outline: none;
   cursor: pointer; }
 
 @media (max-width: 870px) {
   .pagination > li > a {
-    border-radius: 50%;
     padding: 10px 15px; } }
 @media (max-width: 540px) {
   .pagination > li > a {
