--- a/src/components/SubscribeSmallBox/SubscribeSmallBox.scss
+++ b/src/components/SubscribeSmallBox/SubscribeSmallBox.scss
@@ -39,40 +39,25 @@
   }
 }
 
-@media(max-width: 1200px)and (min-width: 600px) {
+@media(max-width: 1200px)and (min-width: 900px) {
   .subscribe-small-box {
     display: none;
   }
 }
-
-@media(max-width: 600px) {
-  .subscribe-small-box__email {
-    left: 55px;
+@media(max-width: 900px) {
+  .subscribe-small-box {
+    height: auto;
   }
-
+  .subscribe-small-box__form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .subscribe-small-box__email{
+    position: static;
+  }
   .subscribe-small-box__button {
-    right: 80px;
-  }
-}
-
-@media(max-width: 530px) {
-  .subscribe-small-box__email {
-    padding: 7px 10px;
-    font-size: 12px;
-  }
-
-  .subscribe-small-box__button {
-    padding: 6px 10px;
-  }
-}
-
-@media(max-width: 380px) {
-  .subscribe-small-box__button {
-    right: 40px;
-  }
-}
-@media(max-width: 285px) {
-  .subscribe-small-box__button {
-    right: 20px;
+    position: static;
+   margin: 30px;
   }
 }
