--- a/src/assets/styles/css/SubscribeBox.css
+++ b/src/assets/styles/css/SubscribeBox.css
@@ -9,6 +9,9 @@
   .subscribe-box__title {
     padding: 20px 0; }
 
+@media (max-width: 1100px) {
+  .subscribe-box {
+    padding: 60px 0px; } }
 @media (max-width: 900px) {
   .subscribe-box {
     display: none; } }
