--- a/src/assets/styles/css/SubscribeSmallBox.css
+++ b/src/assets/styles/css/SubscribeSmallBox.css
@@ -14,13 +14,13 @@
     font-weight: 600;
     line-height: 30px; }
   .subscribe-small-box__email {
-    padding: 13px;
+    padding: 13px 90px 13px 13px;
     border-radius: 40px;
     position: absolute;
     left: 70px;
     border: none;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
-    width: 55%; }
+    width: 30%; }
   .subscribe-small-box__button {
     border-radius: 40px;
     padding: 14px 20px;
@@ -41,7 +41,9 @@
     align-items: center; }
 
   .subscribe-small-box__email {
-    position: static; }
+    position: static;
+    width: 50%;
+    padding: 20px; }
 
   .subscribe-small-box__button {
     position: static;
