--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -10,6 +10,7 @@
 @media (max-width: 1200px) {
   .pagination-box__main-card {
     max-height: none;
+    text-align: center;
     margin: 20px 10px 15px 10px; } }
 @media (max-width: 600px) {
   .pagination-box {
