--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -17,6 +17,7 @@
 @media (max-width: 1200px) {
   .pagination-box__main-card {
     max-height: none;
+    text-align: center;
     margin: 20px 10px 15px 10px;
   }
 }
